create ocr lib module, update dependencies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
 
     <!-- Labels for subtype -->
     <string name="label_subtype_generic">%s</string>
+    <string name="label_subtype_bg_BG">Bulgaria</string>
     <string name="label_subtype_en_GB">English (GB)</string>
     <string name="label_subtype_es_ES">Español</string>
 
