plumbing for the ocr service, adding request permissions activity. WIP

--- a/ocrlib/src/main/res/values/strings.xml
+++ b/ocrlib/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">OCR LIB</string>
+    <string name="notify_perm_title">Allow write to SD Card?</string>
+    <string name="notify_perm_body">In order to recognize characters, Cyrilliscript needs to use\n a trained data file. Allow saving it to SD Card?</string>
 </resources>
