--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="clear">x</string>
+    <string name="clear">Clear</string>
+    <string name="backspace">Backspace</string>
+    <string name="enter">Enter</string>
 </resources>
