added icons for the control buttons added space (wired) and undo (not wired yet) buttons added spinner to select recognition white/black lists of glyphs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,9 @@
     <string name="clear">Clear</string>
     <string name="backspace">Backspace</string>
     <string name="enter">Enter</string>
+    <string-array name="input_select">
+        <item>ABC</item>
+        <item>123</item>
+        <item>$%@</item>
+    </string-array>
 </resources>
