--- a/eventslib/src/main/res/values/strings.xml
+++ b/eventslib/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="cancel">Cancel</string>
     <string name="download_prompt">Would you like to download the trained language file for</string>
     <string name="confirm">Yes</string>
+    <string name="test_bed">Try to enter some text here...</string>
 </resources>
