--- a/eventslib/src/main/res/values/strings.xml
+++ b/eventslib/src/main/res/values/strings.xml
@@ -1,10 +1,3 @@
 <resources>
-    <string name="app_name">EventsLib</string>
-    <string name="lib_name">EventsLib</string>
-    <string name="language_input_settings">Language and Input Settings</string>
-    <string name="instructions"><![CDATA[In order to use Cyrilliscript, it has to be enabled as an Input Method in the system settings. Launch the Language and Input Settings, navigate to Virtual Keyboard > Manage Keyboards to enable Cyrilliscript]]></string>
-    <string name="cancel">Cancel</string>
-    <string name="download_prompt">Would you like to download the trained language file for</string>
-    <string name="confirm">Yes</string>
-    <string name="test_bed">Try to enter some text here...</string>
+    <string name="app_name">EVENTS LIB</string>
 </resources>
