--- a/ocrlib/src/main/res/values/strings.xml
+++ b/ocrlib/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
     <string name="app_name">OCR LIB</string>
-    <string name="notify_perm_title">Allow write to SD Card?</string>
-    <string name="notify_perm_body">In order to recognize characters, Cyrilliscript needs to use\n a trained data file. Allow saving it to SD Card?</string>
     <string name="lib_name">EventsLib</string>
     <string name="language_input_settings">Language and Input Settings</string>
     <string name="instructions"><![CDATA[In order to use Cyrilliscript, it has to be enabled as an Input Method in the system settings. Launch the Language and Input Settings, navigate to Virtual Keyboard > Manage Keyboards to enable Cyrilliscript]]></string>
     <string name="cancel">Cancel</string>
-    <string name="download_prompt">Would you like to download the trained language file for</string>
     <string name="confirm">Yes</string>
     <string name="test_bed">Try to enter some text here…</string>
+    <string name="suggest_download">Cyrilliscript supports the official language of your location! Tap to download the trained data file</string>
+    <string name="download_file">Download file</string>
 </resources>
