--- a/ocrlib/src/main/res/values/strings.xml
+++ b/ocrlib/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="cancel">Cancel</string>
     <string name="confirm">Yes</string>
     <string name="test_bed">Try to enter some text here…</string>
-    <string name="suggest_download">Cyrilliscript supports the official language of your location! Tap to download the trained data file</string>
+    <string name="suggest_download">Tap to download the trained data file for your location\'s language</string>
     <string name="download_file">Download file</string>
 </resources>
