wire up the statistics widget to query the statistics db and display the events count and the average confidence

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
     <string name="no_address_found">No address found</string>
     <string name="address_found">Address found</string>
+    <string name="cyrilliscript_statistics">Cyrilliscript Statistics</string>
     <string-array name="input_select">
         <item>ABC</item>
         <item>123</item>
