--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,20 +38,18 @@
     <string name="settings_name">Cyrilliscript Keyboard Settings</string>
     <string name="language_selection_title">Input languages</string>
     <string name="select_language">Select input languages</string>
-    <string name="general_category">General</string>
 
-    <string name="action_settings">Settings</string>
-    <string name="clear">Clear</string>
-    <string name="backspace">Backspace</string>
-    <string name="enter">Enter</string>
     <string name="service_not_available">Service not available</string>
     <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
     <string name="no_address_found">No address found</string>
     <string name="address_found">Address found</string>
     <string name="cyrilliscript_statistics">Cyrilliscript Statistics</string>
+    <string name="save">Save</string>
     <string-array name="input_select">
         <item>ABC</item>
         <item>123</item>
         <item>$%@</item>
     </string-array>
+    <string name="title_activity_user_dictionary">UserDictionaryActivity</string>
+    <string name="action_settings">Settings</string>
 </resources>
