--- a/ocrlib/src/main/res/values/strings.xml
+++ b/ocrlib/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="test_bed">Try to enter some text here…</string>
     <string name="suggest_download">Tap to download the trained data file for your location\'s language</string>
     <string name="download_file">Download file</string>
+    <string name="user_defined_dictionary">User Defined Dictionary</string>
 </resources>
