#4, part 1, the button to delete is defined and onClick listener is created. Actual delete not yet wired

--- a/ocrlib/src/main/res/values/strings.xml
+++ b/ocrlib/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="download_file">Download file</string>
     <string name="user_defined_dictionary">User Defined Dictionary</string>
     <string name="download">Download</string>
+    <string name="delete">Delete</string>
 </resources>
